--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Sistema_Guarderia</PageTitle>
 
-<div class="page">
+<div class="page" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
     <AuthorizeView>
         <Authorized>
             <div class="sidebar" style="animation: slideInUp 0.5s; animation-delay: 0.1s;">
@@ -20,7 +20,7 @@
         </Authorized>
         <NotAuthorized>
             <div class="container row" Style="animation: slideInUp 0.9s; animation-delay: 0.2s; margin-right:303px; margin-left:303px">
-                <div class="center-row px-1">
+                <div class="center-row px-1" Style="animation: slideInDown 0.9s; animation-delay: 0.2s;">
                     <LoginDisplay />
                 </div>
             </div>
