--- a/Pages/Inicio.razor
+++ b/Pages/Inicio.razor
@@ -18,7 +18,7 @@
             var resultado = await Swal.FireAsync(new SweetAlertOptions
             {
                 Title = "Bienvenido!",
-                Text = "Este sistema te ayudara a tener un mayor control de tu guarderia",
+                Text = "Inicia seccion para ingresar al sistema.",
                 Icon = SweetAlertIcon.Success,
                 ShowCancelButton = false,
                 HeightAuto = true
