--- a/Pages/Registros/R_Cliente.razor
+++ b/Pages/Registros/R_Cliente.razor
@@ -7,7 +7,20 @@
 @inject SweetAlertService Swal
 
 <EditForm Model="@cliente" OnValidSubmit="@Guardar">
+
+    @*Esta linea de html se utilizar para la verificacion de una navegacion sin realizar un guardado.
+    Esta implementacion se alimenta de un metodo de verificacion de campos. Al realizar una navegacion,
+    el metodo determina si los campos son igual a 0 (null) o si es mayor a 0. Si es igual a 0, podra realizar la
+    navegacion.
+    Pero si los campos son mayor a 0 y no a realizado un guardado, lanzara una notifiacion para validar si desea salir o
+    no.*@
+
     <NavigationLock OnBeforeInternalNavigation="OnBeforeInternalNavigation" />
+
+    @*Nota: si acepta salir de la pagina en donde se localiza a otra, la informacion que dijido se eliminara, ya que no
+    se realizo un guardado para
+    salvaguardar esos datos. Pero si es lo contrario, podra salir sin ningun problema.*@
+
     <RadzenCard Class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
         <RadzenCard Class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
             <h3 class="text-center" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">Formulario de Clientes
@@ -75,7 +88,6 @@
 
     private Cliente cliente = new Cliente();
     public List<Cliente> lista { get; set; } = new List<Cliente>();
-
     protected async override Task OnInitializedAsync()
     {
         if (ClienteId > 0)
@@ -137,10 +149,7 @@
                     });
             }
         }
-        catch (Exception ex)
-        {
-            // Manejar la excepción de manera adecuada
-        }
+        catch (Exception ex){}
     }
 
     async Task Guardar()
@@ -202,7 +211,7 @@
         catch (Exception ex) { }
     }
 
-    //Metodo para verificar si el usuario guardo antes de cambiar de paginado
+    // Metodo para verificar si el usuario guardo antes de cambiar de paginado
     private async Task OnBeforeInternalNavigation(LocationChangingContext context)
     {
         int camposCompletos = 0;
