--- a/Shared/LoginDisplay.razor
+++ b/Shared/LoginDisplay.razor
@@ -39,10 +39,10 @@
 
     private bool showCancelButton = false;
 
-    /* Notificion de inicio */
+    /* Notificion de inicio
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender)
+        /*if (firstRender)
         {
             await Task.Delay(1460);
             var resultado = await Swal.FireAsync(new SweetAlertOptions
@@ -67,5 +67,5 @@
                 ShowCancelButton = false
             });
         }
-    }
+    }*/
 }
