--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
             <div class="nav-item px-3">
                 <RadzenPanelMenuItem Text="Servicios" Icon="home"
                     style="font-size: 12px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
-                    <RadzenPanelMenuItem Text="Registro" Path="RServicios"
+                    <RadzenPanelMenuItem Text="Registro" Path="R_Servicios"
                         style="font-size: 10px; border: 1px solid #ccc; border-radius: 2px; padding: 5px;" />
                     <RadzenPanelMenuItem Text="Consulta" Path="C_Servicios"
                         style="font-size: 10px; border: 1px solid #ccc; border-radius: 2px; padding: 5px;" />
@@ -37,7 +37,6 @@
             </div>
         </RadzenPanelMenu>
     </div>
-
 </div>
 
 @code {
